# bromate

./: .cruft.json  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE.txt  README.md  bromate.html  docker-compose.yml  index.html  invoke.yaml  pyproject.toml  search.js
.github/workflows/: check.yml  publish.yml
bromate/: actions.html  agents.html  drivers.html  executions.html  interactions.html  scripts.html  settings.html  types.html
demos/: MLOps.webm
diagrams/: modules.md
notebooks/: Prototype.py
src/bromate/: __init__.py  __main__.py  actions.py  agents.py  browsers.py  drivers.py  executions.py  interactions.py  interfaces.py  models.py  scripts.py  sessions.py  settings.py  types.py
tasks/: __init__.py  checks.py  cleans.py  publishes.py
tests/: test_scripts.py
